# SQLSurgeon

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_action_flow.py  test_debug_inference.py  test_fixes.py  test_llm_direct.py  test_llm_raw.py  test_llm_response.py  test_research_upgrade.py  test_sanity.py
.github/workflows/: ci.yml
examples/: tester_colab.ipynb  tester_curl.sh  tester_js.mjs  tester_python.py
server/: Dockerfile  __init__.py  app.py  database.py  graders.py  requirements.txt  sql_surgeon_environment.py  tasks.py
tests/: conftest.py  test_api_contract.py  test_model_defaults.py
